# Bots-Discord

./: Token.py  main  main.py  music.py
PagodeiroBot/: aulas.json  keep_alive.py  main.py  manimg.py  music.py  pyproject.toml
PagodeiroBot/templates/: index.html
