[tool.poetry]
name = "repl_python3_PagodeiroBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
youtube_dl = "^2021.6.6"
discord = "^1.7.3"
music = "^0.7b0"
PyNaCl = "^1.4.0"
utils = "^1.0.1"
sox = "^1.4.1"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
